# Ray_Caster_Abandoned

./: .gitignore  CMakeLists.txt  README.md  Ray_Caster.sln
.cache/clangd/index/: Attributes.hpp.B5304DF88740E26B.idx  BlendMode.hpp.BF35FBFBFBCD1F26.idx  CircleShape.hpp.24DCF1BB78252775.idx  Clipboard.hpp.49D2E6113677403B.idx  Clock.hpp.6E1AE8F28CEBA613.idx  Color.hpp.F710C995FE47B670.idx  Config.hpp.99D7B1B7A73D0470.idx  Context.hpp.B9AC2971F6FB6504.idx  ContextSettings.hpp.D6920D2411FEBB87.idx  ConvexShape.hpp.52AAB639388B1878.idx  Cursor.hpp.03F16B39E54B3A58.idx  Drawable.hpp.2E6E42ABC1EB3676.idx  Entities.hpp.34E0FB5EA4D71718.idx  Err.hpp.14A5A2D0696D6429.idx  Event.hpp.A4A861192F7D1EA2.idx  Export.hpp.B7B022A5358A8640.idx  Export.hpp.C95BD99BE8E75F71.idx  Export.hpp.F4248058537059FD.idx  FileInputStream.hpp.AD2003C4F283BCEC.idx  Font.hpp.A6A8488EE005BEB3.idx  GlResource.hpp.8153CCC8ED922BE3.idx  Glsl.hpp.670EF809BC757141.idx  Glsl.inl.374CE880C1B86D4B.idx  Glyph.hpp.5E0425FBBF5B4E99.idx  Graphics.hpp.9093339365FF967F.idx  Image.hpp.C8CF092F3804104D.idx  InputStream.hpp.FD926A7F83B7EFF1.idx  Joystick.hpp.C611536E00602304.idx  Keyboard.hpp.DE56C4B841398334.idx  Lock.hpp.0A14EB83EBA1BCC8.idx  MemoryInputStream.hpp.E6A25D9A5F309925.idx  Mouse.hpp.884F6F0DC94A2BE5.idx  Mutex.hpp.C9D7FDB474E385D2.idx  NonCopyable.hpp.58F7F61A983DFEF2.idx  PrimitiveType.hpp.6BD20B5F7FF73AD3.idx  Ray_Caster.cpp.CB75BFCD72AEC85A.idx  Rect.hpp.0CC63D2B31A73D5B.idx  Rect.inl.BE1181B0DD28F93C.idx  RectangleShape.hpp.0AAFE649A8305E37.idx  RenderStates.hpp.AA29EA98D0CE951D.idx  (+39 more)
Dependencies/: vcpkg.C.C.vcpkg.1.0.0.nupkg
Ray_Caster/: Attributes.h  Entities.h  Ray_Caster.cpp  Ray_Caster.vcxproj  Ray_Caster.vcxproj.filters
Ray_Caster/x64/Debug/: Ray_Caster.exe.recipe  vc143.idb
Ray_Caster/x64/Debug/Ray_Caster.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Ray_Caster.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Ray_Caster/x64/Release/Ray_Caster.tlog/: Ray_Caster.lastbuildstate
src/: Attributes.cpp  Entities.cpp  Ray_Caster.cpp
src/Header_Files/: Attributes.hpp  Entities.h  Entities.hpp
